# futuresdr-zcu111

./: .gitignore  .gitmodules  start.sh
futuresdr/: README  boot.sh
futuresdr/.petalinux/: metadata
futuresdr/hardware/xilinx-zcu111-2022.2/: main.tcl  xilinx-zcu111-2022.2.xpr
futuresdr/hardware/xilinx-zcu111-2022.2/ip/acp_test/: component.xml
futuresdr/project-spec/configs/: config  rootfs_config
futuresdr/project-spec/configs/init-ifupdown/: interfaces
futuresdr/project-spec/configs/systemd-conf/: wired.network
futuresdr/project-spec/hw-description/: psu_init.c  psu_init_gpl.c  psu_init_gpl.h
futuresdr/project-spec/meta-user/conf/: user-rootfsconfig
ip_repo/tlastgen_1_0/: component.xml
ip_repo/tlastgen_1_0/hdl/: tlastgen_v1_0.v  tlastgen_v1_0_M00_AXIS.v  tlastgen_v1_0_S00_AXIS.v
switcher/: Cargo.toml
switcher/src/: main.rs
xilinx-zcu111-2022.2/: boot.sh
xilinx-zcu111-2022.2/.petalinux/: metadata
xilinx-zcu111-2022.2/hardware/xilinx-zcu111-2022.2/: config_bd.tcl
xilinx-zcu111-2022.2/hardware/xilinx-zcu111-2022.2/outputs/: README.hw
xilinx-zcu111-2022.2/project-spec/configs/: config  rootfs_config
xilinx-zcu111-2022.2/project-spec/hw-description/: psu_init.h  psu_init.tcl
xilinx-zcu111-2022.2/project-spec/meta-user/conf/: petalinuxbsp.conf  user-rootfsconfig
zigbee/: Cargo.toml  build.sh  config.toml  deploy_image.sh  deploy_ssh.sh  env.sh  spectrum.py
zigbee/.cargo/: config.toml  x86cc.sh
zigbee/src/: clock_recovery_mm.rs  lib.rs  mac.rs  packet_source.rs  source.rs
(+2289 files in other folders)
